--- a/doc/us-common.css
+++ b/doc/us-common.css
@@ -1,4 +1,4 @@
-/* This document is a part of the Ceylan-Myriad Project */
+/* This document is a part of the Universal Server Project */
 /* Standard Cascading Style Sheet File */
 
 
