--- a/doc/us_common-api.css
+++ b/doc/us_common-api.css
@@ -1,4 +1,4 @@
-/* Standard Cascading Style Sheet File, part of the Ceylan-Myriad Project.
+/* Standard Cascading Style Sheet File, part of the US-Common Project.
  * This file corresponds to the CSS for the generated API documentation.
  */
 
